fixing layout issues

--- a/public/src/app/main-content/languages/languages.component.css
+++ b/public/src/app/main-content/languages/languages.component.css
@@ -71,8 +71,8 @@ h1, h2 {
 
 .triangle-down {
   position: absolute;
-  right: 0;
-  left: 0;
+  right: auto;
+  left: auto;
   bottom: -1.2rem;
   width: 0;
   height: 0;
