--- a/public/src/app/main-content/slider/slider.component.css
+++ b/public/src/app/main-content/slider/slider.component.css
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  height: auto;
 }
 
 .row-top {
@@ -121,7 +122,6 @@
 
   .container{
     flex-direction: column-reverse;
-    height: 125vh;
   }
 
   .row-top {
@@ -148,7 +148,7 @@
 @media only screen and (min-width: 371px){
   .container{
     flex-direction: column-reverse;
-    height: 120vh;
+    height: auto;
   }
 
   .row-top {
@@ -175,7 +175,7 @@
 @media only screen and (min-width: 600px){
   .container{
     flex-direction: column-reverse;
-    height: 90vh;
+    height: auto;
   }
 
   .row-top {
